objects/TeamMember__c.object
<CustomObject>
    <description>PRM Oct 2013: Generic Team Member object that can be used for any custom object. As part of PRM, this is being used for Program Team functionality</description>
    <fields>
        <fullName>AccessLevel__c</fullName>
        <description>Record share to be given to the user</description>
        <label>Access Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Read</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                </value>
                <value>
                    <fullName>All</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PartnerProgram__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Partner Program to which the team members we will be added</description>
        <label>Partner Program</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Program team members are allowed for Country / Cluster programs only.</errorMessage>
            <filterItems>
                <field>PartnerProgram__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Country Partner Program, Cluster Partner Program</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>PartnerProgram__c</referenceTo>
        <relationshipLabel>Program Team</relationshipLabel>
        <relationshipName>ProgramTeamMembers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Member of the team</description>
        <label>User</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 OR 2) AND 3</booleanFilter>
            <errorMessage>Only Program Managers / Program Administrator can be added to Program Team</errorMessage>
            <filterItems>
                <field>User.ProgramManager__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.ProgramAdministrator__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.ContactId</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>TeamMemberUser</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Related Team Member</label>
    <nameField>
        <displayFormat>TM-{000000}</displayFormat>
        <label>Team Member Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Team Members</pluralLabel>
    <recordTypes>
        <fullName>PartnerProgramTeam</fullName>
        <active>true</active>
        <description>Partner Program Team</description>
        <label>Partner Program Team</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>PartnerProgramTeam__c</fullName>
        <label>Partner Program Team</label>
    </sharingReasons>
    <validationRules>
        <fullName>TM_VR_OCT13PRM001_IsProgramManager</fullName>
        <active>true</active>
        <description>Determine if the user chosen is a program manager when Partner Program lookup is set</description>
        <errorConditionFormula>NOT( $User.BypassVR__c ) &amp;&amp;  NOT(ISBLANK( PartnerProgram__c )) &amp;&amp; NOT( OR(User__r.ProgramManager__c, User__r.ProgramAdministrator__c  ))</errorConditionFormula>
        <errorMessage>You can add Program Managers/Program Administrators only as members of program team</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TM_VR_OCT13PRM002_IsTeamMembrProgrmOwner</fullName>
        <active>true</active>
        <description>PRM OCT 13 REL: Determine if the team member being added is same as Program Owner</description>
        <errorConditionFormula>NOT( $User.BypassVR__c )  &amp;&amp;  NOT(ISBLANK( PartnerProgram__c )) &amp;&amp;  PartnerProgram__r.Owner:User.Id =  User__c</errorConditionFormula>
        <errorMessage>You cannot chose Program Owner as Program team member</errorMessage>
    </validationRules>
</CustomObject>